samples/_failures_safe/1761348563_98be04_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06c59115.c: In function ‘main’:
./samples/SAFE/__tmp_06c59115.c:185:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  185 |     int token
      |     ^~~
./samples/SAFE/__tmp_06c59115.c:185:5: error: expected declaration or statement at end of input
